--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@ body {
   margin: 0;
   height: 100svh;
   background-color: rgb(17, 17, 17);
-  background-image: url("../assets/background.jpeg");
+  background-image: url("/assets/background.jpeg");
   background-repeat: no-repeat;
   background-size: cover;
   backdrop-filter: blur(6px);
